[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xlsxtpl"
version = "0.1.0"
description = "Jinja2 templating for xlsx files, analogous to docxtpl for Word documents"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xlsxtpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
